--- a/crates/models/database/Cargo.toml
+++ b/crates/models/database/Cargo.toml
@@ -4,14 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+argon2 = { workspace = true }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
 boilermates = { workspace = true }
 chrono = { workspace = true }
 common_models = { path = "../../models/common" }
+educe = { version = "=0.6.0", features = ["Debug"], default-features = false }
+media_models = { path = "../../models/media" }
+fitness_models = { path = "../../models/fitness" }
+importer_models = { path = "../../models/importer" }
+user_models = { path = "../../models/user" }
 enums = { path = "../../enums" }
-services = { path = "../../services" }
+file_storage_service = { path = "../../services/file_storage" }
+application_utils = { path = "../../utils/application" }
 rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
 sea-orm-migration = { workspace = true }
@@ -19,3 +27,5 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 strum = { workspace = true }
+nanoid = { workspace = true }
+uuid = { workspace = true }
