--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ members = [
     "crates/models/database",
     "crates/models/dependent",
     "crates/models/fitness",
+    "crates/models/importer",
     "crates/models/media",
+    "crates/models/user",
     "crates/services",
     "crates/services/file_storage",
     "crates/services/jwt",
@@ -22,6 +24,7 @@ resolver = "2"
 
 [workspace.dependencies]
 anyhow = "=1.0.82"
+argon2 = "=0.6.0-pre.1"
 async-graphql = { version = "=7.0.7", features = [
     "chrono",
     "decimal",
@@ -67,3 +70,4 @@ serde_json = "=1.0.120"
 serde_with = { version = "=3.9.0", features = ["chrono_0_4"] }
 strum = { version = "=0.26.2", features = ["derive"] }
 tracing = { version = "=0.1.40", features = ["attributes"] }
+uuid = { version = "=1.10.0", features = ["v4"], default-features = false }
