--- a/crates/services/jwt/Cargo.toml
+++ b/crates/services/jwt/Cargo.toml
@@ -9,4 +9,4 @@ chrono = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
 jsonwebtoken = { version = "=9.3.0", default-features = false }
-uuid = { version = "=1.10.0", features = ["v4"], default-features = false }
+uuid = { workspace = true }
