--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-common_models = { path = "../models/common" }
-database_models = { path = "../models/database" }
+application_utils = { path = "../utils/application" }
 dependent_models = { path = "../models/dependent" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
+common_models = { path = "../models/common" }
+database_models = { path = "../models/database" }
 media_models = { path = "../models/media" }
-file_storage_service = { path = "../services/file_storage" }
 sea-orm = { workspace = true }
-application_utils = { path = "../utils/application" }
+tracing = { workspace = true }
