--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -78,3 +78,4 @@ tracing = { workspace = true }
 tracing-subscriber = "=0.3.18"
 traits = { path = "../../crates/traits" }
 logs-wheel = "=0.3.1"
+uuid = { workspace = true }
