--- a/crates/enums/Cargo.toml
+++ b/crates/enums/Cargo.toml
@@ -11,3 +11,6 @@ sea-orm-migration = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 strum = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
