--- a/crates/models/importer/Cargo.toml
+++ b/crates/models/importer/Cargo.toml
@@ -9,3 +9,6 @@ enums = { path = "../../enums" }
 sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
