--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -5,18 +5,17 @@ edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
-async-trait = { workspace = true }
 boilermates = { workspace = true }
 chrono = { workspace = true }
-application_utils = { path = "../../utils/application" }
 common_models = { path = "../../models/common" }
 enums = { path = "../../enums" }
 file_storage_service = { path = "../../services/file_storage" }
 rust_decimal = { workspace = true }
 schematic = { workspace = true }
 sea-orm = { workspace = true }
-sea-orm-migration = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
-strum = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
