--- a/crates/models/user/Cargo.toml
+++ b/crates/models/user/Cargo.toml
@@ -12,3 +12,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 strum = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
