--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "crates/models/fitness",
     "crates/models/importer",
     "crates/models/media",
+    "crates/models/specific",
     "crates/models/user",
     "crates/services",
     "crates/services/file_storage",
