--- a/crates/utils/application/Cargo.toml
+++ b/crates/utils/application/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
 axum = { workspace = true }
+chrono = { workspace = true }
+chrono-tz = { workspace = true }
 common_utils = { path = "../common" }
 config = { path = "../../config" }
 file_storage_service = { path = "../../services/file_storage" }
