--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ schematic = { version = "=0.16.6", features = [
     "renderer_template",
     "yaml",
 ], default-features = false }
-sea-orm = { version = "=1.0.0-rc.5", features = [
+sea-orm = { version = "=1.0.0", features = [
     "debug-print",
     "postgres-array",
     "macros",
@@ -70,7 +70,7 @@ sea-orm = { version = "=1.0.0-rc.5", features = [
     "with-rust_decimal",
     "with-uuid",
 ], default-features = false }
-sea-orm-migration = "=1.0.0-rc.5"
+sea-orm-migration = "=1.0.0"
 serde = { version = "=1.0.204", features = ["derive"] }
 serde_json = "=1.0.120"
 serde_with = { version = "=3.9.0", features = ["chrono_0_4"] }
