chore(services): add files for integration service

--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 exporter_service = { path = "./exporter" }
 file_storage_service = { path = "./file_storage" }
+integration_service = { path = "./integration" }
 jwt_service = { path = "./jwt" }
 notification_service = { path = "./notification" }
