feat(resolvers,services): add files for miscellaneous move

--- a/crates/resolvers/Cargo.toml
+++ b/crates/resolvers/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 exporter_resolver = { path = "./exporter" }
 fitness_resolver = { path = "./fitness" }
+miscellaneous_resolver = { path = "./miscellaneous" }
