refactor(services): another one bites the dust
This time, it was the miscellaneous service.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ enum_meta = "=0.7.0"
 itertools = "=0.13.0"
 markdown = "=1.0.0-alpha.18"
 nanoid = "=0.4.0"
+openidconnect = "=3.5.0"
 regex = "=1.10.5"
 rust_decimal = "=1.35.0"
 rust_decimal_macros = "=1.35.0"
