--- a/crates/models/dependent/Cargo.toml
+++ b/crates/models/dependent/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 async-graphql = { workspace = true }
 common_models = { path = "../common" }
 database_models = { path = "../database" }
+enums = { path = "../../enums" }
 media_models = { path = "../media" }
 fitness_models = { path = "../fitness" }
+rust_decimal = { workspace = true }
 schematic = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
