--- a/crates/services/miscellaneous/Cargo.toml
+++ b/crates/services/miscellaneous/Cargo.toml
@@ -4,3 +4,44 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+apalis = { workspace = true }
+application_utils = { path = "../../utils/application" }
+async-graphql = { workspace = true }
+argon2 = { workspace = true }
+background = { path = "../../background" }
+cached = { version = "=0.53.1", features = ["disk_store"] }
+chrono = { workspace = true }
+chrono-tz = { workspace = true }
+enum_meta = { workspace = true }
+common_models = { path = "../../models/common" }
+common_utils = { path = "../../utils/common" }
+config = { path = "../../config" }
+database_models = { path = "../../models/database" }
+database_utils = { path = "../../utils/database" }
+dependent_models = { path = "../../models/dependent" }
+enums = { path = "../../enums" }
+file_storage_service = { path = "../../services/file_storage" }
+fitness_models = { path = "../../models/fitness" }
+futures = "=0.3.30"
+integration_service = { path = "../../services/integration" }
+itertools = { workspace = true }
+jwt_service = { path = "../../services/jwt" }
+markdown = { workspace = true }
+media_models = { path = "../../models/media" }
+migrations = { path = "../../migrations" }
+nanoid = { workspace = true }
+notification_service = { path = "../../services/notification" }
+openidconnect = { workspace = true }
+providers = { path = "../../providers" }
+reqwest = { workspace = true }
+rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }
+sea-orm = { workspace = true }
+sea-query = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+slug = { workspace = true }
+tracing = { workspace = true }
+traits = { path = "../../traits" }
+user_models = { path = "../../models/user" }
+uuid = { workspace = true }
