--- a/crates/resolvers/Cargo.toml
+++ b/crates/resolvers/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 exporter_resolver = { path = "./exporter" }
 fitness_resolver = { path = "./fitness" }
+importer_resolver = { path = "./importer" }
 miscellaneous_resolver = { path = "./miscellaneous" }
