--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 exporter_service = { path = "./exporter" }
 file_storage_service = { path = "./file_storage" }
 fitness_service = { path = "./fitness" }
+importer_service = { path = "./importer" }
 integration_service = { path = "./integration" }
 jwt_service = { path = "./jwt" }
 miscellaneous_service = { path = "./miscellaneous" }
