--- a/mprocs.yaml
+++ b/mprocs.yaml
@@ -1,6 +1,6 @@
 procs:
-  Backend: "cargo watch --ignore 'docs/includes' --ignore 'libs/generated' -qx 'run --package ryot'"
+  Backend: "cargo watch --ignore 'docs/includes' --ignore 'libs/generated' -qx 'run'"
   Frontend: "moon run frontend:dev"
   Transactional: "moon run transactional:dev"
-  Main Reverse Proxy: "caddy run --config ci/Caddyfile"
-  Minio Reverse Proxy: "caddy reverse-proxy --from :9000 --to ryot-minio:9000"
+  Main Reverse Proxy: "caddy run --config 'ci/Caddyfile'"
+  Minio Reverse Proxy: "caddy reverse-proxy --from ':9000' --to 'ryot-minio:9000'"
