--- a/crates/services/fitness/Cargo.toml
+++ b/crates/services/fitness/Cargo.toml
@@ -29,3 +29,6 @@ sea-orm = { workspace = true }
 sea-query = { workspace = true }
 slug = { workspace = true }
 tracing = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["rust_decimal"]
