--- a/crates/utils/database/Cargo.toml
+++ b/crates/utils/database/Cargo.toml
@@ -23,3 +23,6 @@ rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
 user_models = { path = "../../models/user" }
+
+[package.metadata.cargo-machete]
+ignored = ["rust_decimal"]
