--- a/crates/models/database/Cargo.toml
+++ b/crates/models/database/Cargo.toml
@@ -10,7 +10,7 @@ async-graphql = { workspace = true }
 async-trait = { workspace = true }
 boilermates = { workspace = true }
 chrono = { workspace = true }
-common_models = { path = "../../models/common" }
+common-models = { path = "../../models/common" }
 educe = { version = "=0.6.0", features = ["Debug"], default-features = false }
 enums = { path = "../../enums" }
 importer_models = { path = "../../models/importer" }
