--- a/crates/models/fitness/Cargo.toml
+++ b/crates/models/fitness/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 application_utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
-common_models = { path = "../../models/common" }
+common-models = { path = "../../models/common" }
 derive_more = { version = "=1.0.0-beta.6", features = [
   "add",
   "sum",
