--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 async-graphql = { workspace = true }
 boilermates = { workspace = true }
 chrono = { workspace = true }
-common_models = { path = "../../models/common" }
+common-models = { path = "../../models/common" }
 enums = { path = "../../enums" }
 file_storage_service = { path = "../../services/file_storage" }
 rust_decimal = { workspace = true }
