--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -9,7 +9,7 @@ application_utils = { path = "../utils/application" }
 dependent_models = { path = "../models/dependent" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
-common_models = { path = "../models/common" }
+common-models = { path = "../models/common" }
 database_models = { path = "../models/database" }
 media_models = { path = "../models/media" }
 sea-orm = { workspace = true }
