--- a/crates/models/dependent/Cargo.toml
+++ b/crates/models/dependent/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 async-graphql = { workspace = true }
 common-models = { path = "../common" }
-database_models = { path = "../database" }
+database-models = { path = "../database" }
 enums = { path = "../../enums" }
 importer_models = { path = "../importer" }
 media_models = { path = "../media" }
