--- a/crates/resolvers/importer/Cargo.toml
+++ b/crates/resolvers/importer/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
-database_models = { path = "../../models/database" }
+database-models = { path = "../../models/database" }
 importer_service = { path = "../../services/importer" }
 media_models = { path = "../../models/media" }
 traits = { path = "../../traits" }
