--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -17,7 +17,7 @@ data-encoding = "=2.6.0"
 enum_meta = { workspace = true }
 common-models = { path = "../../models/common" }
 common_utils = { path = "../../utils/common" }
-database_models = { path = "../../models/database" }
+database-models = { path = "../../models/database" }
 database_utils = { path = "../../utils/database" }
 dependent_models = { path = "../../models/dependent" }
 enums = { path = "../../enums" }
