--- a/crates/services/integration/Cargo.toml
+++ b/crates/services/integration/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = { workspace = true }
 application_utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 enums = { path = "../../enums" }
-database_models = { path = "../../models/database" }
+database-models = { path = "../../models/database" }
 database_utils = { path = "../../utils/database" }
 media_models = { path = "../../models/media" }
 providers = { path = "../../providers" }
