--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -10,7 +10,7 @@ dependent_models = { path = "../models/dependent" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
 common-models = { path = "../models/common" }
-database_models = { path = "../models/database" }
+database-models = { path = "../models/database" }
 media_models = { path = "../models/media" }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
